Start MongoDB output plugin

--- a/pax/config/eventbuilder.ini
+++ b/pax/config/eventbuilder.ini
@@ -7,11 +7,11 @@ look_for_config_in_runs_db = False
 
 plugin_group_names = ['input', 'output']
 
-input =  'MongoDB.MongoDBReadUntriggered'
-decoder_plugin = 'MongoDB.MongoDBReadUntriggeredFiller'
+input =  'Eventbuilder.EventbuilderReadUntriggered'
+decoder_plugin = 'Eventbuilder.EventbuilderReadUntriggeredFiller'
 encoder_plugin = 'Pickle.EncodeZPickle'
 output = ['Zip.WriteZipped',
-          'MongoDB.MongoDBClearUntriggered']            # Clearuntriggered must be in output, it requires ordered events
+          'Eventbuilder.EventbuilderClearUntriggered']            # Clearuntriggered must be in output, it requires ordered events
 
 [Queues]
 # Use a higher than usual (for pax) number of blocks/queue,
@@ -26,7 +26,7 @@ fields_to_ignore = []
 [Zip.WriteZipped]
 ignore_existing_dir = True      # Makes sure the trigger monitor data file does not get deleted
 
-[MongoDB]
+[Eventbuilder]
 # The runs db address is a little different inside the DAQ network. We also use a separate user.
 host = 'gw'
 user = 'eb'
