--- a/pax/config/XENON1T_update.ini
+++ b/pax/config/XENON1T_update.ini
@@ -2,4 +2,11 @@
 
 
 [BuildPeaks.GapSizeClustering]
-max_gap_size_in_cluster = 2 * units.us
+max_gap_size_in_cluster = 2.7 * us
+
+
+[NaturalBreaksClustering]
+# Points in log10(peak_area), goodness_of_split. Split threshold is linearly interpolated between these.
+# Manual "fit" to stay above 99th percentile of our deepest S2 signals
+split_goodness_threshold = ([ 0.        ,  1.47712125,  2.        ,  2.60205999,  3.30103   ],
+                            [(1,           0.95,       0.85,         0.62,        0.5)])
