--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -233,11 +233,8 @@ input_name = "xe100_120402_2000_000000.xed"
 
 
 
-[OnlineMonitor.OnlineMonitor]
-address = "xedaq00"
-database = "online"
-collection = "monitor"
-waveformcollection = "waveforms"
+[Mongo]
+uri = 'mongodb://localhost:27017/'
 
 
 [ROOTClass]
