--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -236,6 +236,10 @@ input_name = "xe100_120402_2000_000000.xed"
 [Mongo]
 uri = 'mongodb://localhost:27017/'
 
+# Can be 'database_per_run', 'collection_per_run', or 'single_collection'.
+mode = 'collection_per_run'
+database_name = 'pax_events'
+
 
 [ROOTClass]
 tree_name = 'tree'
