Hand-tuned simple S1 shape model

--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -173,6 +173,11 @@ samples_to_store_after  =             50
 special_thresholds =                  {}
 
 [WaveformSimulator]
+
+s1_model_type = 'simple'
+s1_decay_time = 35 * ns
+pmt_transit_time_spread = 12 * ns
+
 # Waveform building / noise simulation settings
 real_noise_file =                     None               # Must be a numpy.savez_compressed file containing 1 numpy array (row per channel) of noise data
                                                          # Set to None or False if you don't want to use real noise
@@ -186,7 +191,7 @@ anode_voltage =                       4.0 * kV           # xenon:xenon1t:aalbers
 # PMT characteristics
 # https://xecluster.lngs.infn.it/dokuwiki/lib/exe/fetch.php?media=xenon:xenon1t:dsg:sensors:r11410_21_datasheet_140930.pdf
 pmt_transit_time_mean     =           46  * ns           # 46 ns from PMTs (50 ns delay time from 10 meter cable length to DAQ not included)
-pmt_transit_time_spread   =           8.5 * ns           # https://xecluster.lngs.infn.it/dokuwiki/lib/exe/fetch.php?media=xenon:xenon1t:org:marrodan_wg_pmt_lngs_november2014.pdf
+# pmt_transit_time_spread   =           8.5 * ns           # https://xecluster.lngs.infn.it/dokuwiki/lib/exe/fetch.php?media=xenon:xenon1t:org:marrodan_wg_pmt_lngs_november2014.pdf
 pmt_rise_time             =           3.0 * ns           # Daniel Mayani with scope
 pmt_fall_time             =           10.0 * ns          # Daniel Mayani with scope
 
@@ -217,7 +222,7 @@ s1_detection_efficiency =             0.12               # Monte Carlo paper dra
                                                          # This should include LCE and QE effects, but not zero-length encoding / hitfinder acceptance.
 s1_patterns_file =                    'XENON1T_s1_xyz_patterns.json.gz'
 s2_patterns_file =                    'XENON1T_s2_xy_patterns_top_updatedgeo.json.gz'
-s2_mean_area_fraction_top =           0.56             # See XeAnalysisScripts/mapmaking
+s2_mean_area_fraction_top =           0.65             # See XeAnalysisScripts/mapmaking
 
 gas_gap_warping_map =                 'gas_gap_warping_map_Oct16.pkl'   # Fit to single electrons [note to be written]
 
