configuration file modified

--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -39,6 +39,8 @@ dsp = [
 
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
+			# Saturation correction
+			PeakAreaCorrections.S2SaturationCorrectionWF	
                         # Position reconstruction
                         'WeightedSum.PosRecWeightedSum',
                         'MaxPMT.PosRecMaxPMT',
