--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -40,7 +40,7 @@ dsp = [
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
 			# Saturation correction
-			PeakAreaCorrections.S2SaturationCorrectionWF	
+			'PeakAreaCorrections.S2SaturationCorrectionWF',	
                         # Position reconstruction
                         'WeightedSum.PosRecWeightedSum',
                         'MaxPMT.PosRecMaxPMT',
