new configure for saturation correction

--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -40,7 +40,7 @@ dsp = [
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
 			# Saturation correction
-			'PeakAreaCorrections.S2SaturationCorrectionWF',	
+#			'PeakAreaCorrections.S2SaturationCorrectionWF',	
                         # Position reconstruction
                         'WeightedSum.PosRecWeightedSum',
                         'MaxPMT.PosRecMaxPMT',
@@ -58,6 +58,9 @@ compute_properties = [
 pre_analysis = [
                 # Classify the clusters based on the properties
                 'ClassifyPeaks.AdHocClassification1T',
+                # Saturation correction
+                'PeakAreaCorrections.S2SaturationCorrectionWF',	
+
 
                 # Do 3d posrec on the S1s (would like to do this earlier on all peaks, but performance...)
                 # 'ThreeDPatternFit.PosRecThreeDPatternFit',
