--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -42,7 +42,7 @@ compute_properties = [
                         # Classify the clusters based on the properties
                         'ClassifyPeaks.AdHocClassification1T',
                         # Saturation correction
-                        'PeakAreaCorrections.S2SaturationCorrectionWF',	
+                        #'PeakAreaCorrections.S2SaturationCorrectionWF',	
                         # Position reconstruction
 
                         'WeightedSum.PosRecWeightedSum',
@@ -54,11 +54,14 @@ compute_properties = [
                         # Additional properties
                         'HitpatternSpread.HitpatternSpread',
                         'PeakAreaCorrections.S2SaturationCorrection',
+                        'PeakAreaCorrections.S2SaturationCorrectionByWF',
                      ]
 
 # Final stage with 'risky' operations: peak classification, S1/S2 pairing, corrections
 # Intentionally last, so reclassification takes least work
 pre_analysis = [
+                # Classify the clusters based on the properties
+                #'ClassifyPeaks.AdHocClassification1T',
                 # Do 3d posrec on the S1s (would like to do this earlier on all peaks, but performance...)
                 # 'ThreeDPatternFit.PosRecThreeDPatternFit',
 
