use saturated PMTs for position reconstruction as well

--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -417,7 +417,7 @@ seed_algorithms = 'best'
 
 # If true, will treat saturated PMTs as if they do not exist
 # Note that's very different from assuming they see nothing!
-ignore_saturated_PMTs = True
+ignore_saturated_PMTs = False # not needed since saturation is corrected
 
 # Minimizer to use: 'powell' or 'grid'.
 # grid is a lot faster if the grid size is small.
