The s2 mean area top fraction for fax is updated to match the recent G4 update of LCE map. See issue: https://github.com/XENON1T/pax/issues/491

--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -217,7 +217,7 @@ s1_detection_efficiency =             0.12               # Monte Carlo paper dra
                                                          # This should include LCE and QE effects, but not zero-length encoding / hitfinder acceptance.
 s1_patterns_file =                    'XENON1T_s1_xyz_patterns.json.gz'
 s2_patterns_file =                    'XENON1T_s2_xy_patterns_top_updatedgeo.json.gz'
-s2_mean_area_fraction_top =           0.56             # See XeAnalysisScripts/mapmaking
+s2_mean_area_fraction_top =           0.678             # See Issue: https://github.com/XENON1T/pax/issues/491
 
 gas_gap_warping_map =                 'gas_gap_warping_map_Oct16.pkl'   # Fit to single electrons [note to be written]
 
