Default gain values in XENON1T updated. Values (averaged during the first science run) are used as default. Also temporarily the gain_sigma is 0.35*gain. Later gain_sigmas will be updated according to values given by PMT WG.

--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -15890,12 +15890,537 @@ channels_bottom = list(range(127, 247 + 1))
 
 # PMT gains
 # The correct TPC PMT gains are now fetched from the runs db, these are just some placeholder values
-gains = [2.5e6] * 248 + \
-        [2e6] * 6 +\              # 248-253 Placeholders for 1-inch XENON100 PMT
-        [2.5e6 / 31.25] +\        # 254, Acquisition monitor sum waveform. Signal is attenuated by 31.25 in NIM FAN, see #392
-        [1e5] * 5                 # 256-259 "Digital inputs" on acquisition monitor. Numbers are just to make plots look reasonable.
+# @ 2017-02-14 The default gains now come from PMT WG. 
+# It is the average values for the first science run
+# Only for waveform simulation usage
+gains = [
+    2454700.0, # PMT ID = 0
+    0.0, # PMT ID = 1
+    2220960.0, # PMT ID = 2
+    2155720.0, # PMT ID = 3
+    3914230.0, # PMT ID = 4
+    2193190.0, # PMT ID = 5
+    4794680.0, # PMT ID = 6
+    2306410.0, # PMT ID = 7
+    2302830.0, # PMT ID = 8
+    3568740.0, # PMT ID = 9
+    2431830.0, # PMT ID = 10
+    3051300.0, # PMT ID = 11
+    0.0, # PMT ID = 12
+    3106890.0, # PMT ID = 13
+    2162410.0, # PMT ID = 14
+    2447030.0, # PMT ID = 15
+    2680920.0, # PMT ID = 16
+    2142420.0, # PMT ID = 17
+    2399060.0, # PMT ID = 18
+    2299720.0, # PMT ID = 19
+    2393640.0, # PMT ID = 20
+    2240190.0, # PMT ID = 21
+    4351390.0, # PMT ID = 22
+    2360750.0, # PMT ID = 23
+    3167230.0, # PMT ID = 24
+    2316990.0, # PMT ID = 25
+    0.0, # PMT ID = 26
+    0.0, # PMT ID = 27
+    2369150.0, # PMT ID = 28
+    2360410.0, # PMT ID = 29
+    4065970.0, # PMT ID = 30
+    2293450.0, # PMT ID = 31
+    4155640.0, # PMT ID = 32
+    2455290.0, # PMT ID = 33
+    0.0, # PMT ID = 34
+    3181110.0, # PMT ID = 35
+    2343640.0, # PMT ID = 36
+    2470630.0, # PMT ID = 37
+    3798760.0, # PMT ID = 38
+    3369460.0, # PMT ID = 39
+    2450890.0, # PMT ID = 40
+    3178970.0, # PMT ID = 41
+    3736900.0, # PMT ID = 42
+    2350790.0, # PMT ID = 43
+    2795680.0, # PMT ID = 44
+    2641520.0, # PMT ID = 45
+    2262460.0, # PMT ID = 46
+    3631590.0, # PMT ID = 47
+    2314930.0, # PMT ID = 48
+    3264430.0, # PMT ID = 49
+    3760810.0, # PMT ID = 50
+    0.0, # PMT ID = 51
+    2409370.0, # PMT ID = 52
+    2139890.0, # PMT ID = 53
+    3652190.0, # PMT ID = 54
+    1972600.0, # PMT ID = 55
+    4568780.0, # PMT ID = 56
+    3448980.0, # PMT ID = 57
+    2104010.0, # PMT ID = 58
+    2270160.0, # PMT ID = 59
+    2844820.0, # PMT ID = 60
+    2129320.0, # PMT ID = 61
+    0.0, # PMT ID = 62
+    3808380.0, # PMT ID = 63
+    3544490.0, # PMT ID = 64
+    0.0, # PMT ID = 65
+    2288970.0, # PMT ID = 66
+    2391430.0, # PMT ID = 67
+    4828820.0, # PMT ID = 68
+    3072220.0, # PMT ID = 69
+    3779430.0, # PMT ID = 70
+    2222680.0, # PMT ID = 71
+    2232660.0, # PMT ID = 72
+    0.0, # PMT ID = 73
+    4812910.0, # PMT ID = 74
+    4664870.0, # PMT ID = 75
+    2921810.0, # PMT ID = 76
+    3367480.0, # PMT ID = 77
+    1913240.0, # PMT ID = 78
+    0.0, # PMT ID = 79
+    3377140.0, # PMT ID = 80
+    4191370.0, # PMT ID = 81
+    4439910.0, # PMT ID = 82
+    2110200.0, # PMT ID = 83
+    2550060.0, # PMT ID = 84
+    2188750.0, # PMT ID = 85
+    0.0, # PMT ID = 86
+    2488540.0, # PMT ID = 87
+    0.0, # PMT ID = 88
+    2653900.0, # PMT ID = 89
+    2332770.0, # PMT ID = 90
+    0.0, # PMT ID = 91
+    3498370.0, # PMT ID = 92
+    2312630.0, # PMT ID = 93
+    2959870.0, # PMT ID = 94
+    4258430.0, # PMT ID = 95
+    4458110.0, # PMT ID = 96
+    2982780.0, # PMT ID = 97
+    2103810.0, # PMT ID = 98
+    2251460.0, # PMT ID = 99
+    2255500.0, # PMT ID = 100
+    3081240.0, # PMT ID = 101
+    0.0, # PMT ID = 102
+    2403450.0, # PMT ID = 103
+    3415100.0, # PMT ID = 104
+    3740300.0, # PMT ID = 105
+    3904240.0, # PMT ID = 106
+    2313870.0, # PMT ID = 107
+    4807940.0, # PMT ID = 108
+    2286720.0, # PMT ID = 109
+    2402270.0, # PMT ID = 110
+    2373820.0, # PMT ID = 111
+    2228830.0, # PMT ID = 112
+    2858710.0, # PMT ID = 113
+    2916730.0, # PMT ID = 114
+    1781090.0, # PMT ID = 115
+    3648120.0, # PMT ID = 116
+    2187960.0, # PMT ID = 117
+    0.0, # PMT ID = 118
+    2264870.0, # PMT ID = 119
+    2452100.0, # PMT ID = 120
+    4718690.0, # PMT ID = 121
+    2300960.0, # PMT ID = 122
+    2306600.0, # PMT ID = 123
+    2213380.0, # PMT ID = 124
+    2221760.0, # PMT ID = 125
+    4896670.0, # PMT ID = 126
+    4770270.0, # PMT ID = 127
+    2310130.0, # PMT ID = 128
+    2685350.0, # PMT ID = 129
+    0.0, # PMT ID = 130
+    3365590.0, # PMT ID = 131
+    4624650.0, # PMT ID = 132
+    3286860.0, # PMT ID = 133
+    0.0, # PMT ID = 134
+    0.0, # PMT ID = 135
+    3889670.0, # PMT ID = 136
+    0.0, # PMT ID = 137
+    4449840.0, # PMT ID = 138
+    0.0, # PMT ID = 139
+    4762350.0, # PMT ID = 140
+    3208830.0, # PMT ID = 141
+    2236040.0, # PMT ID = 142
+    3357250.0, # PMT ID = 143
+    2659320.0, # PMT ID = 144
+    3396690.0, # PMT ID = 145
+    3991870.0, # PMT ID = 146
+    4898720.0, # PMT ID = 147
+    0.0, # PMT ID = 148
+    2353690.0, # PMT ID = 149
+    0.0, # PMT ID = 150
+    4052570.0, # PMT ID = 151
+    0.0, # PMT ID = 152
+    3628540.0, # PMT ID = 153
+    2743550.0, # PMT ID = 154
+    2358020.0, # PMT ID = 155
+    3237420.0, # PMT ID = 156
+    2287810.0, # PMT ID = 157
+    4468640.0, # PMT ID = 158
+    4120150.0, # PMT ID = 159
+    2291580.0, # PMT ID = 160
+    2351640.0, # PMT ID = 161
+    0.0, # PMT ID = 162
+    2218320.0, # PMT ID = 163
+    2282280.0, # PMT ID = 164
+    2583050.0, # PMT ID = 165
+    2360800.0, # PMT ID = 166
+    0.0, # PMT ID = 167
+    2279370.0, # PMT ID = 168
+    4541610.0, # PMT ID = 169
+    4793430.0, # PMT ID = 170
+    3299140.0, # PMT ID = 171
+    3995930.0, # PMT ID = 172
+    2331190.0, # PMT ID = 173
+    2216930.0, # PMT ID = 174
+    4323330.0, # PMT ID = 175
+    2757670.0, # PMT ID = 176
+    2936360.0, # PMT ID = 177
+    0.0, # PMT ID = 178
+    2342170.0, # PMT ID = 179
+    4784790.0, # PMT ID = 180
+    4817250.0, # PMT ID = 181
+    3261000.0, # PMT ID = 182
+    0.0, # PMT ID = 183
+    2239070.0, # PMT ID = 184
+    4246190.0, # PMT ID = 185
+    4003630.0, # PMT ID = 186
+    4074060.0, # PMT ID = 187
+    2262390.0, # PMT ID = 188
+    2271890.0, # PMT ID = 189
+    4770520.0, # PMT ID = 190
+    2658560.0, # PMT ID = 191
+    3535460.0, # PMT ID = 192
+    4630830.0, # PMT ID = 193
+    3372580.0, # PMT ID = 194
+    2256000.0, # PMT ID = 195
+    2253920.0, # PMT ID = 196
+    2234930.0, # PMT ID = 197
+    0.0, # PMT ID = 198
+    3268330.0, # PMT ID = 199
+    2168200.0, # PMT ID = 200
+    3443220.0, # PMT ID = 201
+    2170770.0, # PMT ID = 202
+    0.0, # PMT ID = 203
+    3892380.0, # PMT ID = 204
+    1904620.0, # PMT ID = 205
+    0.0, # PMT ID = 206
+    3810420.0, # PMT ID = 207
+    2432080.0, # PMT ID = 208
+    2031360.0, # PMT ID = 209
+    3356590.0, # PMT ID = 210
+    3857000.0, # PMT ID = 211
+    4256180.0, # PMT ID = 212
+    0.0, # PMT ID = 213
+    0.0, # PMT ID = 214
+    4834730.0, # PMT ID = 215
+    4109580.0, # PMT ID = 216
+    2037580.0, # PMT ID = 217
+    4711720.0, # PMT ID = 218
+    4705220.0, # PMT ID = 219
+    2352110.0, # PMT ID = 220
+    4788170.0, # PMT ID = 221
+    3412780.0, # PMT ID = 222
+    4755180.0, # PMT ID = 223
+    3188370.0, # PMT ID = 224
+    2385220.0, # PMT ID = 225
+    4619810.0, # PMT ID = 226
+    2764010.0, # PMT ID = 227
+    2653900.0, # PMT ID = 228
+    4630550.0, # PMT ID = 229
+    2230830.0, # PMT ID = 230
+    3732750.0, # PMT ID = 231
+    2296410.0, # PMT ID = 232
+    2553580.0, # PMT ID = 233
+    0.0, # PMT ID = 234
+    4664230.0, # PMT ID = 235
+    2295320.0, # PMT ID = 236
+    2274810.0, # PMT ID = 237
+    4755530.0, # PMT ID = 238
+    0.0, # PMT ID = 239
+    2328320.0, # PMT ID = 240
+    4243100.0, # PMT ID = 241
+    4610070.0, # PMT ID = 242
+    4307860.0, # PMT ID = 243
+    0.0, # PMT ID = 244
+    3981150.0, # PMT ID = 245
+    3444510.0, # PMT ID = 246
+    4587680.0, # PMT ID = 247
+    2e6, # PMT ID = 248
+    2e6, # PMT ID = 249
+    2e6, # PMT ID = 250
+    2e6, # PMT ID = 251
+    2e6, # PMT ID = 252
+    2e6, # PMT ID = 253
+    2.5e6 / 31.25, # PMT ID = 254
+    1e5, # PMT ID = 255
+    1e5, # PMT ID = 256
+    1e5, # PMT ID = 257
+    1e5, # PMT ID = 258
+    1e5, # PMT ID = 259
+    ]
 
-gain_sigmas = [1e6] * 260                          # PLACEHOLDER
+# @2017-02-14
+# Placeholder
+# The gain_sigma is currently 0.35*gain
+gain_sigmas = [
+    859145.0, # PMT ID = 0
+    0.0, # PMT ID = 1
+    777336.0, # PMT ID = 2
+    754502.0, # PMT ID = 3
+    1369980.5, # PMT ID = 4
+    767616.5, # PMT ID = 5
+    1678138.0, # PMT ID = 6
+    807243.5, # PMT ID = 7
+    805990.5, # PMT ID = 8
+    1249059.0, # PMT ID = 9
+    851140.5, # PMT ID = 10
+    1067955.0, # PMT ID = 11
+    0.0, # PMT ID = 12
+    1087411.5, # PMT ID = 13
+    756843.5, # PMT ID = 14
+    856460.5, # PMT ID = 15
+    938321.9999999999, # PMT ID = 16
+    749847.0, # PMT ID = 17
+    839671.0, # PMT ID = 18
+    804902.0, # PMT ID = 19
+    837774.0, # PMT ID = 20
+    784066.5, # PMT ID = 21
+    1522986.5, # PMT ID = 22
+    826262.5, # PMT ID = 23
+    1108530.5, # PMT ID = 24
+    810946.5, # PMT ID = 25
+    0.0, # PMT ID = 26
+    0.0, # PMT ID = 27
+    829202.5, # PMT ID = 28
+    826143.5, # PMT ID = 29
+    1423089.5, # PMT ID = 30
+    802707.5, # PMT ID = 31
+    1454474.0, # PMT ID = 32
+    859351.5, # PMT ID = 33
+    0.0, # PMT ID = 34
+    1113388.5, # PMT ID = 35
+    820274.0, # PMT ID = 36
+    864720.5, # PMT ID = 37
+    1329566.0, # PMT ID = 38
+    1179311.0, # PMT ID = 39
+    857811.5, # PMT ID = 40
+    1112639.5, # PMT ID = 41
+    1307915.0, # PMT ID = 42
+    822776.5, # PMT ID = 43
+    978487.9999999999, # PMT ID = 44
+    924531.9999999999, # PMT ID = 45
+    791861.0, # PMT ID = 46
+    1271056.5, # PMT ID = 47
+    810225.5, # PMT ID = 48
+    1142550.5, # PMT ID = 49
+    1316283.5, # PMT ID = 50
+    0.0, # PMT ID = 51
+    843279.5, # PMT ID = 52
+    748961.5, # PMT ID = 53
+    1278266.5, # PMT ID = 54
+    690410.0, # PMT ID = 55
+    1599073.0, # PMT ID = 56
+    1207143.0, # PMT ID = 57
+    736403.5, # PMT ID = 58
+    794556.0, # PMT ID = 59
+    995686.9999999999, # PMT ID = 60
+    745262.0, # PMT ID = 61
+    0.0, # PMT ID = 62
+    1332933.0, # PMT ID = 63
+    1240571.5, # PMT ID = 64
+    0.0, # PMT ID = 65
+    801139.5, # PMT ID = 66
+    837000.5, # PMT ID = 67
+    1690087.0, # PMT ID = 68
+    1075277.0, # PMT ID = 69
+    1322800.5, # PMT ID = 70
+    777938.0, # PMT ID = 71
+    781431.0, # PMT ID = 72
+    0.0, # PMT ID = 73
+    1684518.5, # PMT ID = 74
+    1632704.5, # PMT ID = 75
+    1022633.4999999999, # PMT ID = 76
+    1178618.0, # PMT ID = 77
+    669634.0, # PMT ID = 78
+    0.0, # PMT ID = 79
+    1181999.0, # PMT ID = 80
+    1466979.5, # PMT ID = 81
+    1553968.5, # PMT ID = 82
+    738570.0, # PMT ID = 83
+    892521.0, # PMT ID = 84
+    766062.5, # PMT ID = 85
+    0.0, # PMT ID = 86
+    870989.0, # PMT ID = 87
+    0.0, # PMT ID = 88
+    928864.9999999999, # PMT ID = 89
+    816469.5, # PMT ID = 90
+    0.0, # PMT ID = 91
+    1224429.5, # PMT ID = 92
+    809420.5, # PMT ID = 93
+    1035954.4999999999, # PMT ID = 94
+    1490450.5, # PMT ID = 95
+    1560338.5, # PMT ID = 96
+    1043972.9999999999, # PMT ID = 97
+    736333.5, # PMT ID = 98
+    788011.0, # PMT ID = 99
+    789425.0, # PMT ID = 100
+    1078434.0, # PMT ID = 101
+    0.0, # PMT ID = 102
+    841207.5, # PMT ID = 103
+    1195285.0, # PMT ID = 104
+    1309105.0, # PMT ID = 105
+    1366484.0, # PMT ID = 106
+    809854.5, # PMT ID = 107
+    1682779.0, # PMT ID = 108
+    800352.0, # PMT ID = 109
+    840794.5, # PMT ID = 110
+    830837.0, # PMT ID = 111
+    780090.5, # PMT ID = 112
+    1000548.4999999999, # PMT ID = 113
+    1020855.4999999999, # PMT ID = 114
+    623381.5, # PMT ID = 115
+    1276842.0, # PMT ID = 116
+    765786.0, # PMT ID = 117
+    0.0, # PMT ID = 118
+    792704.5, # PMT ID = 119
+    858235.0, # PMT ID = 120
+    1651541.5, # PMT ID = 121
+    805336.0, # PMT ID = 122
+    807310.0, # PMT ID = 123
+    774683.0, # PMT ID = 124
+    777616.0, # PMT ID = 125
+    1713834.5, # PMT ID = 126
+    1669594.5, # PMT ID = 127
+    808545.5, # PMT ID = 128
+    939872.4999999999, # PMT ID = 129
+    0.0, # PMT ID = 130
+    1177956.5, # PMT ID = 131
+    1618627.5, # PMT ID = 132
+    1150401.0, # PMT ID = 133
+    0.0, # PMT ID = 134
+    0.0, # PMT ID = 135
+    1361384.5, # PMT ID = 136
+    0.0, # PMT ID = 137
+    1557444.0, # PMT ID = 138
+    0.0, # PMT ID = 139
+    1666822.5, # PMT ID = 140
+    1123090.5, # PMT ID = 141
+    782614.0, # PMT ID = 142
+    1175037.5, # PMT ID = 143
+    930761.9999999999, # PMT ID = 144
+    1188841.5, # PMT ID = 145
+    1397154.5, # PMT ID = 146
+    1714552.0, # PMT ID = 147
+    0.0, # PMT ID = 148
+    823791.5, # PMT ID = 149
+    0.0, # PMT ID = 150
+    1418399.5, # PMT ID = 151
+    0.0, # PMT ID = 152
+    1269989.0, # PMT ID = 153
+    960242.4999999999, # PMT ID = 154
+    825307.0, # PMT ID = 155
+    1133097.0, # PMT ID = 156
+    800733.5, # PMT ID = 157
+    1564024.0, # PMT ID = 158
+    1442052.5, # PMT ID = 159
+    802053.0, # PMT ID = 160
+    823074.0, # PMT ID = 161
+    0.0, # PMT ID = 162
+    776412.0, # PMT ID = 163
+    798798.0, # PMT ID = 164
+    904067.5, # PMT ID = 165
+    826280.0, # PMT ID = 166
+    0.0, # PMT ID = 167
+    797779.5, # PMT ID = 168
+    1589563.5, # PMT ID = 169
+    1677700.5, # PMT ID = 170
+    1154699.0, # PMT ID = 171
+    1398575.5, # PMT ID = 172
+    815916.5, # PMT ID = 173
+    775925.5, # PMT ID = 174
+    1513165.5, # PMT ID = 175
+    965184.4999999999, # PMT ID = 176
+    1027725.9999999999, # PMT ID = 177
+    0.0, # PMT ID = 178
+    819759.5, # PMT ID = 179
+    1674676.5, # PMT ID = 180
+    1686037.5, # PMT ID = 181
+    1141350.0, # PMT ID = 182
+    0.0, # PMT ID = 183
+    783674.5, # PMT ID = 184
+    1486166.5, # PMT ID = 185
+    1401270.5, # PMT ID = 186
+    1425921.0, # PMT ID = 187
+    791836.5, # PMT ID = 188
+    795161.5, # PMT ID = 189
+    1669682.0, # PMT ID = 190
+    930495.9999999999, # PMT ID = 191
+    1237411.0, # PMT ID = 192
+    1620790.5, # PMT ID = 193
+    1180403.0, # PMT ID = 194
+    789600.0, # PMT ID = 195
+    788872.0, # PMT ID = 196
+    782225.5, # PMT ID = 197
+    0.0, # PMT ID = 198
+    1143915.5, # PMT ID = 199
+    758870.0, # PMT ID = 200
+    1205127.0, # PMT ID = 201
+    759769.5, # PMT ID = 202
+    0.0, # PMT ID = 203
+    1362333.0, # PMT ID = 204
+    666617.0, # PMT ID = 205
+    0.0, # PMT ID = 206
+    1333647.0, # PMT ID = 207
+    851228.0, # PMT ID = 208
+    710976.0, # PMT ID = 209
+    1174806.5, # PMT ID = 210
+    1349950.0, # PMT ID = 211
+    1489663.0, # PMT ID = 212
+    0.0, # PMT ID = 213
+    0.0, # PMT ID = 214
+    1692155.5, # PMT ID = 215
+    1438353.0, # PMT ID = 216
+    713153.0, # PMT ID = 217
+    1649102.0, # PMT ID = 218
+    1646827.0, # PMT ID = 219
+    823238.5, # PMT ID = 220
+    1675859.5, # PMT ID = 221
+    1194473.0, # PMT ID = 222
+    1664313.0, # PMT ID = 223
+    1115929.5, # PMT ID = 224
+    834827.0, # PMT ID = 225
+    1616933.5, # PMT ID = 226
+    967403.4999999999, # PMT ID = 227
+    928864.9999999999, # PMT ID = 228
+    1620692.5, # PMT ID = 229
+    780790.5, # PMT ID = 230
+    1306462.5, # PMT ID = 231
+    803743.5, # PMT ID = 232
+    893753.0, # PMT ID = 233
+    0.0, # PMT ID = 234
+    1632480.5, # PMT ID = 235
+    803362.0, # PMT ID = 236
+    796183.5, # PMT ID = 237
+    1664435.5, # PMT ID = 238
+    0.0, # PMT ID = 239
+    814912.0, # PMT ID = 240
+    1485085.0, # PMT ID = 241
+    1613524.5, # PMT ID = 242
+    1507751.0, # PMT ID = 243
+    0.0, # PMT ID = 244
+    1393402.5, # PMT ID = 245
+    1205578.5, # PMT ID = 246
+    1605688.0, # PMT ID = 247
+    700000.0, # PMT ID = 248
+    700000.0, # PMT ID = 249
+    700000.0, # PMT ID = 250
+    700000.0, # PMT ID = 251
+    700000.0, # PMT ID = 252
+    700000.0, # PMT ID = 253
+    28000.0, # PMT ID = 254
+    35000.0, # PMT ID = 255
+    35000.0, # PMT ID = 256
+    35000.0, # PMT ID = 257
+    35000.0, # PMT ID = 258
+    35000.0, # PMT ID = 259
+    ]                        
 # QES from  https://xecluster.lngs.infn.it/xenon1tpmts/daniel_test/tpc_view_datasheets.php
 # (Hamamatsu datasheets)
 quantum_efficiencies = [
