--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -16159,6 +16159,8 @@ gains = [
 # @2017-02-14
 # Placeholder
 # The gain_sigma is currently 0.35*gain
+# the method comes from the reference:
+# https://arxiv.org/pdf/1609.01654.pdf
 gain_sigmas = [
     999568.5682, # PMT ID = 0
     0.0, # PMT ID = 1
