--- a/pax/config/XENON1T.ini
+++ b/pax/config/XENON1T.ini
@@ -66,6 +66,9 @@ pre_analysis = [
                 # Classify the clusters based on the properties
                 'ClassifyPeaks.AdHocClassification1T',
 
+                # S2 peak area calculation without peak finding thresholds
+                'PeakAreaCorrections.S2LinearityCorrection',
+
                 # Do 3d posrec on the S1s (would like to do this earlier on all peaks, but performance...)
                 # 'ThreeDPatternFit.PosRecThreeDPatternFit',
 
