--- a/pax/config/_base.ini
+++ b/pax/config/_base.ini
@@ -396,7 +396,7 @@ event_padding =                       5 * us             # Padding in the event 
                                                          # if you use the cheap_zle, bad things happen if this is smaller than the zle padding
 gauss_noise_sigma        =            0 #pe/bin          # Sigma of Gaussian noise to apply to waveform. Set to 0 if you want only real noise.
 gauss_noise_sigmas =                  None               # list of baseline fluctuations on each PMT channel
-real_noise_file =                     None               # Must be a numpy.savez_compressed file containing 1 numpy array (row per channel) of noise data
+real_noise_file =                     'yfreal.npz'               # Must be a numpy.savez_compressed file containing 1 numpy array (row per channel) of noise data
                                                          # Set to None or False if you don't want to use real noise
 real_noise_sample_mode =              'incoherent'       # 'coherent' or 'incoherent'. Former gives greater variation for limited noise file, latter ensures coherence across channels
 
