--- a/pax/config/Simulation.ini
+++ b/pax/config/Simulation.ini
@@ -14,7 +14,7 @@ look_for_config_in_runs_db = False
 
 input = 'WaveformSimulator.WaveformSimulatorFromCSV'
 decoder_plugin = None
-pre_dsp = None #'ZLE.SoftwareZLE'
+#pre_dsp = None #'ZLE.SoftwareZLE'
 
 [WaveformSimulator]
 output_PI_truth_info = False
